# appa-backend

./: manage.py  pyproject.toml
appa/: asgi.py  settings.py  urls.py  wsgi.py
appa_admin/: apps.py  urls.py
appa_admin/admin/: __init__.py  admin.py
appa_admin/helpers/: delete_user.py
appa_admin/migrations/: 0001_initial.py  0002_remove_user_first_name_remove_user_last_name_and_more.py
appa_admin/models/: __init__.py  manager.py  user.py
appa_admin/serializers/: user_serializer.py
appa_admin/views/: user_views.py
authentication/: urls.py
authentication/admin/: __init__.py  admin.py  black_list_admin.py  role_admin.py
authentication/helpers/: create_token.py
authentication/migrations/: 0001_initial.py  0002_alter_role_name.py  0003_blacklistedtoken_blacklistedtoken_unique_token_user.py
authentication/models/: __init__.py  black_list.py  role.py
authentication/permissions/: is_token_valid.py  role_permissions.py
authentication/serializers/: token_serializer.py  user_login_serializer.py
authentication/views/: authentication_views.py  views.py
services/: urls.py
services/admin/: __init__.py  carriage_admin.py  guide_admin.py  package_admin.py  service_admin.py
services/helpers/: assign_order.py  calculate_distance.py  check_points.py  checkpoints.py  get_route.py  get_service_price.py  get_service_price_and_route.py  graph.py  shortest_path.py
services/migrations/: 0001_initial.py  0002_alter_service_arrived.py  0003_alter_service_type_service_valid_type.py  0004_remove_guide_valid_current_nation_and_more.py  0004_service_route.py
(+11 files in other folders)
